<resources>
    <string name="app_name">JobSeeker</string>
    <string name="full_user_name">Nathan Jones</string>
    <string name="user_phone_number">(555)556–5567</string>
    <string name="user_email">njones@gmail.com</string>
    <string name="skills_text">Skills:</string>
    <string name="skills_chip_placeholder">Java</string>
    <string name="password_text">Password:</string>
    <string name="forgot_pw">Forgot?</string>
    <string name="change_pw">Change?</string>
    <string name="jc_title">Title</string>
    <string name="jc_by_line">Poster - 01/01/2001</string>
    <string name="jc_desc">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nisi mauris, euismod in enim in, varius scelerisque orci. Nulla non magna ut dui condimentum semper. Maecenas facilisis nisl id libero mollis fermentum. Maecenas convallis justo eu enim iaculis, eu egestas ex placerat. Aenean libero leo, maximus non lectus vel, fermentum gravida ipsum. Nam turpis nibh, suscipit sed elementum nec, accumsan sed nulla. Fusce faucibus augue sed turpis finibus cursus. Maecenas eget mollis mi, quis dignissim libero. Vestibulum vitae rutrum eros. Cras quis magna id quam dapibus scelerisque. In ultrices dapibus felis, nec auctor est feugiat at. Ut dapibus libero a velit convallis luctus.
    </string>
    <string name="jc_button">Apply</string>

</resources>