<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/user_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margins"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@drawable/ic_image"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/user_name"
                style="@style/UserInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/full_user_name"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="@id/user_image"
                app:layout_constraintStart_toEndOf="@id/user_image"/>

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="@dimen/detail_icon_size"
                android:layout_height="@dimen/detail_icon_size"
                android:src="@drawable/ic_email"
                app:layout_constraintTop_toBottomOf="@id/user_name"
                app:layout_constraintStart_toStartOf="@id/user_name"/>

            <TextView
                android:id="@+id/email"
                style="@style/UserInfo.Details"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/user_email"
                android:gravity="center"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/email_icon"
                app:layout_constraintStart_toEndOf="@id/email_icon"
                app:layout_constraintBottom_toBottomOf="@id/email_icon"/>

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="@dimen/detail_icon_size"
                android:layout_height="@dimen/detail_icon_size"
                android:src="@drawable/ic_phone"
                app:layout_constraintTop_toBottomOf="@id/email_icon"
                app:layout_constraintStart_toStartOf="@id/email_icon"/>

            <TextView
                android:id="@+id/user_phone_number"
                style="@style/UserInfo.Details"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/user_phone_number"
                android:gravity="center"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/phone_icon"
                app:layout_constraintStart_toEndOf="@id/phone_icon"
                app:layout_constraintBottom_toBottomOf="@id/phone_icon"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/skills_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margins"
        app:layout_constraintTop_toBottomOf="@id/user_info_card">

        <TextView
            android:id="@+id/skills_text"
            style="@style/UserInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/skills_text" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/password_text"
                style="@style/UserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margins"
                android:text="@string/password_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_pw_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margins"
                android:layout_marginStart="8dp"
                android:text="@string/change_pw"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/password_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/forgot_pw_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgot_pw_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margins"
                android:text="@string/forgot_pw"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/change_pw_button"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>